Use package version dictionary for less global var clutter.

--- a/playbooks/tasks/1password_Darwin.yaml
+++ b/playbooks/tasks/1password_Darwin.yaml
@@ -11,7 +11,7 @@
 
 - name: Download 1Password CLI for macOS.
   ansible.builtin.get_url:
-    url: "https://cache.agilebits.com/dist/1P/op2/pkg/v{{ onepassword_version }}/op_apple_universal_v{{ onepassword_version }}.pkg"
+    url: "https://cache.agilebits.com/dist/1P/op2/pkg/v{{ package_versions.onepassword }}/op_apple_universal_v{{ package_versions.onepassword }}.pkg"
     dest: "{{ lookup('env', 'HOME') }}/Downloads/op_apple_universal.pkg"
 
 - name: Install 1Password CLI for macOS.
