--- a/playbooks/tasks/tailscale_Darwin.yaml
+++ b/playbooks/tasks/tailscale_Darwin.yaml
@@ -1,8 +1,8 @@
 ---
 - name: Download Tailscale for macOS.
   ansible.builtin.get_url:
-    url: "https://pkgs.tailscale.com/stable/Tailscale-latest-macos.pkg"
-    dest: "{{ lookup('env', 'HOME') }}/Downloads/Tailscale-latest-macos.pkg"
+    url: "https://pkgs.tailscale.com/stable/Tailscale-{{ package_versions.tailscale }}-macos.pkg"
+    dest: "{{ lookup('env', 'HOME') }}/Downloads/Tailscale-{{ package_versions.tailscale }}-macos.pkg"
 
 - name: Install Tailscale for macOS.
   ansible.builtin.command: "osascript files/tailscale_installer.applescript"
